--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,14 +37,14 @@ h3 {
   font-size: 1rem; }
 
 #tortas {
-  width: 350px;
+  width: 30%;
   margin-bottom: 20px; }
 
 /*sobre mi*/
 .grillaSobreMi {
   display: grid;
-  grid-template-areas: "intro" "foto";
-  justify-items: center; }
+  justify-items: center;
+  grid-template-areas: "intro" "foto"; }
 
 .aboutMe {
   grid-area: intro;
@@ -56,14 +56,17 @@ h3 {
   justify-self: center; }
 
 .tortaOreo {
-  width: 350px;
-  padding: 20px; }
+  width: 50%;
+  padding: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  display: block; }
 
 /*productos*/
 .grillaProductos {
   display: grid;
-  grid-template-areas: "productos" "columnaUno" "columnaDos";
-  justify-items: center; }
+  justify-items: center;
+  grid-template-areas: "productos" "columnaUno" "columnaDos"; }
 
 .productos {
   grid-area: productos; }
@@ -87,31 +90,34 @@ h3 {
   text-align: center; }
 
 .grillaProductos img {
-  height: 15rem;
-  margin: 15px; }
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block; }
 
 /*precios*/
 .grillaPrecios {
   display: grid;
-  grid-template-areas: "precios" "fotosprecios";
-  justify-items: center; }
+  justify-items: center;
+  grid-template-areas: "precios" "fotosprecios"; }
 
 .precios {
   grid-area: precios; }
 
 .fotosPrecios {
   grid-area: fotosprecios; }
-
-.fotosPrecios img {
-  width: 300px;
-  margin-left: 40px;
-  padding: 10px; }
+  .fotosPrecios img {
+    width: 45%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding: 10px; }
 
 /*contacto*/
 .grilla__contacto {
   display: grid;
-  grid-template-areas: "formulario" "map";
-  justify-items: center; }
+  justify-items: center;
+  grid-template-areas: "formulario" "map"; }
 
 .grilla__contacto-formulario {
   grid-area: formulario; }
@@ -162,10 +168,9 @@ select {
 @media all and (min-width: 768px) {
   .grilla__contacto {
     grid-template-areas: "formulario map"; }
-  form input, form textarea {
+  form input, form textarea, form textarea {
     width: 300px; }
   textarea {
-    width: 300px;
     height: 100px; }
   select {
     width: 300px; }
@@ -176,18 +181,13 @@ select {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap; }
-  .fotosPrecios img {
-    margin: 10px;
-    margin-left: 60px; }
   .grillaProductos {
-    grid-template-areas: "productos productos" "columnaUno columnaDos"; } }
+    grid-template-areas: "productos productos" "columnaUno columnaDos"; } }
 
 @media all and (min-width: 992px) {
   body {
     background-color: #f9ab003b; }
-  .header {
-    background-color: #f9ab0052; }
-  .navbarBackground {
+  .header, .navbarBackground {
     background-color: #f9ab0052; }
   .titulos {
     font-size: 2rem; }
@@ -195,10 +195,9 @@ select {
     width: 650px; }
   .grilla__contacto {
     grid-template-areas: "formulario map"; }
-  form input, form textarea {
+  form input, form textarea, form textarea {
     width: 300px; }
   textarea {
-    width: 300px;
     height: 100px; }
   select {
     width: 300px; }
@@ -210,17 +209,10 @@ select {
   .grillaSobreMi {
     grid-template-areas: "intro foto"; }
   .grillaProductos {
-    grid-template-areas: "productos productos" "columnaUno columnaDos"; }
-  .grillaProductos img {
-    height: 20rem; }
+    grid-template-areas: "productos productos" "columnaUno columnaDos"; }
   .fotosPrecios {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap; }
-  .fotosPrecios img {
-    width: 600px;
-    padding: 25px;
-    margin-top: 40px;
-    margin-left: 0; }
   .fotosPrecios img:hover {
     transform: scale(1.1); } }
